--- a/Cross_Validation.ipynb
+++ b/Cross_Validation.ipynb
@@ -319,7 +319,7 @@
    "metadata": {},
    "source": [
     "## \n",
-    "As show above, we have a fairly robust model trained on 10 folds with a mean accuracy of 97.3% on the test."
+    "As shown above, we have a fairly robust model trained on 10 folds with a mean accuracy of 97.3% on the test."
    ]
   },
   {
