--- a/Performance_Check _Regression_Models.ipynb
+++ b/Performance_Check _Regression_Models.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Regrerssion Accuracy Check Using Various Performance Measurses (MAE, MSE, RMSE, R-Squared) in Python\n",
-    "Several accuracy metrics are used in machine learning to evalaute the performance of predictive models. For regression models, the basis of accuracy evaluation is by comparing the original target with predicted values by applying metrics like Mean Average Error (MAE), Mean Square Error (MSE), Root Mean Square Error (RMSE), and R-Squared to explain the errors and the predictive ability of the model. \n",
+    "Several accuracy metrics are used in machine learning to evaluate the performance of predictive models. For regression models, the basis of accuracy evaluation is by comparing the original target with predicted values by applying metrics like Mean Average Error (MAE), Mean Square Error (MSE), Root Mean Square Error (RMSE), and R-Squared to explain the errors and the predictive ability of the model. \n",
     "\n",
     "Herein, we will briefly discuss how to evalaute the accuracy of regression models by using the above-mentioned metrics in python. This post includes \n",
     "\n",
