--- a/Performance_Check _Regression_Models.ipynb
+++ b/Performance_Check _Regression_Models.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "The metrics can be expressed as...\n",
     "\n",
-    "$$ MAE = \\frac{1}{N} \\sum_{i=1}^N |y_i - y^*| $$\n",
+    "$$ MAE = \\frac{1}{N} \\sum_{i=1}^N |y - y^*| $$\n",
     "\n",
     "$$ MSE = \\frac{1}{N} \\sum_{i=1}^N (y_i - y^*)^2 $$\n",
     "\n",
