--- a/Performance_Check _Regression_Models.ipynb
+++ b/Performance_Check _Regression_Models.ipynb
@@ -40,14 +40,14 @@
     "\n",
     "$$ MAE = \\frac{1}{N} \\sum_{i=1}^N |y - y^*| $$\n",
     "\n",
-    "$$ MSE = \\frac{1}{N} \\sum_{i=1}^N (y_i - y^*)^2 $$\n",
+    "$$ MSE = \\frac{1}{N} \\sum_{i=1}^N (y - y^*)^2 $$\n",
     "\n",
-    "$$ RMSE = \\sqrt{MSE} = \\sqrt{\\frac{1}{N} \\sum_{i=1}^N (y_i - y^*)^2} $$\n",
+    "$$ RMSE = \\sqrt{MSE} = \\sqrt{\\frac{1}{N} \\sum_{i=1}^N (y - y^*)^2} $$\n",
     "\n",
-    "$$R^2 = 1 - \\frac{\\sum(y_i - y^*)^2}{\\sum(y^* - y')^2} $$\n",
+    "$$R^2 = 1 - \\frac{\\sum(y - y^*)^2}{\\sum(y^* - y')^2} $$\n",
     "\n",
     "\n",
-    "where, $y_i$, $y^*$, and $y'$ are the original value of y, the predicted value of y, and the mean value of y, respectively. "
+    "where, $y$, $y^*$, and $y'$ are the target value, the predicted value, and the mean value, respectively. "
    ]
   },
   {
